tests/bad_programs/semantic_errors/bool_add_int_ass.notc
int main() {
    int a = false + 8;
    return 0;
}
